--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   mcp_llm: ^1.0.0
   mcp_client: ^1.0.0
   flutter_dotenv: ^5.2.1
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
