--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   flutter_bloc: ^8.1.3
   shared_preferences: ^2.2.2
+  easy_localization: ^3.0.7+1
 
 dev_dependencies:
   flutter_test:
