--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_common:
-    # path: /Users/junyoungkim/Desktop/junyoung/app/source/flutter_common
-    path: C:/Users/junyoung/junyoung/source/flutter_common
+    path: /Users/junyoungkim/Desktop/junyoung/app/source/flutter_common
+    # path: C:/Users/junyoung/junyoung/source/flutter_common
     # git:
     #   url: https://github.com/jun-young1993/flutter_common.git
     #   ref: v1.0.12
@@ -45,6 +45,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   shared_preferences: ^2.2.2
   easy_localization: ^3.0.7+1
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_test:
